# cave-talk

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/CaveTalk/: SKILL.md
src/cave_talk/: __init__.py  audio.py  cli.py  config.py  log.py  menubar.py  storage.py  transcribe.py  wake.py
