[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cave-talk"
version = "0.1.0"
description = "Capture conversations with a rolling audio buffer and local transcription"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
cave-talk = "cave_talk.cli:app"
